# simpleFlashcards

./: .gitignore  README.md  build.sh  buildNotes.txt  cardDeck.py  cardParser.py  design.glade  main.py  pyproject.toml  requirements.txt  simple-flashcards.py  simple-flashcards.spec
sample_decks/: chemistryVocab.txt  randomFlashcards.txt
src/: cardDeck.py  simple-flashcards.py
