[tool.poetry]
name = "flashcards"
version = "0.1.0"
description = ""
authors = ["msabur <58122827+msabur@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
vext = "^0.7.6"
"vext.gi" = "^0.7.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
